@@ -1,3 +1,7 @@
+2012-01-21  Simson Garfinkel  <simsong@imac3.home>
+
+	* src/hash.cpp (display::hash_stdin): added setmode stdin to binary on windows
+
 2012-01-18  Jesse Kornblum <research@jessekornblum.com>
 
 	* CONFIGURE_FC.sh: Removed FC16 checks. It doesn't work.
